vlib/v/checker/tests/assign_expr_type_err_d.out
vlib/v/checker/tests/assign_expr_type_err_d.vv:3:9: error: operator /= not defined on right operand type `bool`
    1 | fn main() {
    2 |     mut foo := 1.5
    3 |     foo /= true
      |            ~~~~
    4 |     _ = foo
    5 | }
