vlib/v/checker/tests/assign_expr_type_err_d.vv
fn main() {
	mut foo := 1.5
	foo /= true
	_ = foo
}
